--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "scripts": {
     "syntax": "syntax-cli",
-    "build-parser": "syntax-cli -g twig.bnf -m lalr1 -o out/parser.js",
+    "build-parser": "syntax-cli -g twig.jison -m lalr1 -o out/parser.js",
     "test": "vitest"
   },
   "author": "Stanislav Romanov <kaermorchen@gmail.com>",
@@ -17,6 +17,7 @@
     "@typescript-eslint/parser": "^5.46.1",
     "esbuild": "^0.17.8",
     "eslint": "^8.29.0",
+    "jison-gho": "^0.6.1-216",
     "release-it": "^15.6.0",
     "syntax-cli": "^0.1.27",
     "typescript": "^4.9.4",
