--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.0.0",
   "description": "",
   "main": "",
+  "type": "module",
   "scripts": {
-    "syntax": "syntax-cli",
-    "build-parser": "syntax-cli -g twig.bnf -m lalr1 -o out/parser.js",
+    "esbuild-base": "esbuild ./src/lexer.ts --bundle --outfile=out/lexer.js --format=cjs --platform=node",
+    "esbuild": "npm run esbuild-base -- --sourcemap",
+    "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
     "test": "vitest"
   },
   "author": "Stanislav Romanov <kaermorchen@gmail.com>",
@@ -20,6 +22,8 @@
     "release-it": "^15.6.0",
     "syntax-cli": "^0.1.27",
     "typescript": "^4.9.4",
+    "unist-builder": "^3.0.1",
+    "vfile": "^5.3.7",
     "vitest": "^0.29.2"
   }
 }
