--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "syntax-cli": "^0.1.27",
     "typescript": "^4.9.4",
     "unist-builder": "^3.0.1",
+    "unist-util-source": "^4.0.2",
     "vfile": "^5.3.7",
     "vitest": "^0.29.2"
   }
