Import  external tokenizer

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "type": "module",
   "scripts": {
-    "esbuild-base": "esbuild ./src/lexer.ts --bundle --outfile=out/lexer.js --format=cjs --platform=node",
+    "esbuild-base": "esbuild ./src/main.ts --bundle --outfile=out/main.js --format=cjs --platform=node",
     "esbuild": "npm run esbuild-base -- --sourcemap",
     "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
     "test": "vitest"
