--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "twig-parser",
   "version": "0.0.0",
   "description": "",
-  "main": "",
+  "main": "out/cjs/index.cjs",
+  "types": "out/cjs/index.d.js",
   "type": "module",
   "scripts": {
-    "esbuild-base": "esbuild ./src/main.ts --bundle --outfile=out/main.js --format=cjs --platform=node",
-    "build": "npm run esbuild-base -- --sourcemap",
+    "clean": "rm -rf ./out",
+    "esbuild-base": "esbuild ./src/index.ts --bundle --platform=node",
+    "build": "npm run clean && npm run build:esm && npm run build:cjs",
+    "build:esm": "npm run esbuild-base -- --target=es2022 --outfile=out/esm/index.mjs --format=esm --minify",
+    "build:cjs": "npm run esbuild-base -- --target=es6    --outfile=out/cjs/index.cjs --format=cjs --minify",
+    "postbuild:esm": "tsc --emitDeclarationOnly --declaration --target es2022 --module NodeNext --moduleResolution NodeNext --outDir out/esm",
+    "postbuild:cjs": "tsc --emitDeclarationOnly --declaration --target ES6    --module CommonJS --moduleResolution Node     --outDir out/cjs",
     "watch": "npm run esbuild-base -- --sourcemap --watch",
     "test": "vitest"
   },
@@ -27,5 +33,17 @@
     "unist-util-source": "^4.0.2",
     "vfile": "^5.3.7",
     "vitest": "^0.29.2"
+  },
+  "exports": {
+    ".": {
+      "import": {
+        "types": "./out/esm/index.d.ts",
+        "default": "./out/esm/index.mjs"
+      },
+      "require": {
+        "types": "./out/cjs/index.d.ts",
+        "default": "./out/cjs/index.cjs"
+      }
+    }
   }
 }
