--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
     "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "target": "es2022",
     "lib": [
       "es2022"
     ],
     "outDir": "out",
     "sourceMap": true,
-    "strict": true,
+    "strict": false,
     "rootDir": "src"
   },
   "include": [
