--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     ],
     "outDir": "out",
     "sourceMap": true,
-    "strict": false,
+    "strict": true,
     "experimentalDecorators": true,
     "rootDir": "src"
   },
