--- a/twig-parser-demo/package.json
+++ b/twig-parser-demo/package.json
@@ -39,6 +39,7 @@
     "@types/rsvp": "^4.0.4",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
+    "autoprefixer": "^10.4.14",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^8.0.1",
     "ember-auto-import": "^2.6.3",
@@ -65,12 +66,15 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-qunit": "^7.3.4",
     "loader.js": "^4.7.0",
+    "postcss": "^8.4.23",
+    "postcss-loader": "^7.2.4",
     "prettier": "^2.8.7",
     "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
     "stylelint": "^15.4.0",
     "stylelint-config-standard": "^32.0.0",
     "stylelint-prettier": "^3.0.0",
+    "tailwindcss": "^3.3.2",
     "tracked-built-ins": "^3.1.1",
     "typescript": "^5.0.4",
     "webpack": "^5.78.0"
