--- a/twig-parser-demo/package.json
+++ b/twig-parser-demo/package.json
@@ -42,6 +42,7 @@
     "autoprefixer": "^10.4.14",
     "broccoli-asset-rev": "^3.0.0",
     "concurrently": "^8.0.1",
+    "cssnano": "^6.0.0",
     "ember-auto-import": "^2.6.3",
     "ember-cli": "~4.12.1",
     "ember-cli-app-version": "^6.0.0",
@@ -68,6 +69,7 @@
     "loader.js": "^4.7.0",
     "postcss": "^8.4.23",
     "postcss-loader": "^7.2.4",
+    "postcss-mixins": "^9.0.4",
     "prettier": "^2.8.7",
     "qunit": "^2.19.4",
     "qunit-dom": "^2.0.0",
