Add monaco editor

--- a/website/package.json
+++ b/website/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
+    "@ember/render-modifiers": "^2.0.5",
     "@ember/string": "^3.0.1",
     "@ember/test-helpers": "^2.9.3",
     "@embroider/compat": "^2.1.1",
@@ -51,10 +52,8 @@
     "ember-cli-htmlbars": "^6.2.0",
     "ember-cli-inject-live-reload": "^2.1.0",
     "ember-cli-typescript": "^5.2.1",
-    "ember-data": "~4.11.3",
     "ember-fetch": "^8.1.2",
     "ember-load-initializers": "^2.1.2",
-    "ember-modifier": "^4.1.0",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^6.2.0",
     "ember-resolver": "^10.0.0",
@@ -67,6 +66,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-qunit": "^7.3.4",
     "loader.js": "^4.7.0",
+    "monaco-editor": "^0.37.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "postcss": "^8.4.23",
     "postcss-loader": "^7.2.4",
     "postcss-mixins": "^9.0.4",
