--- a/website/package.json
+++ b/website/package.json
@@ -57,6 +57,7 @@
     "ember-page-title": "^7.0.0",
     "ember-qunit": "^6.2.0",
     "ember-resolver": "^10.0.0",
+    "ember-set-helper": "^2.0.1",
     "ember-source": "~4.12.0",
     "ember-template-lint": "^5.7.2",
     "eslint": "^8.37.0",
