--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   },
   "author": "Stanislav Romanov <kaermorchen@gmail.com>",
   "license": "Mozilla Public License 2.0",
+  "files": [
+    "out/",
+    "LICENSE",
+    "README.md"
+  ],
   "devDependencies": {
     "@release-it-plugins/lerna-changelog": "^5.0.0",
     "@types/node": "^18.11.15",
@@ -48,6 +53,9 @@
     "chevrotain": "^10.5.0"
   },
   "release-it": {
+    "hooks": {
+      "after:bump": "npm run build && tar -zcf dist.tgz *"
+    },
     "plugins": {
       "release-it-lerna-changelog": {
         "infile": "CHANGELOG.md",
@@ -59,7 +67,10 @@
     },
     "github": {
       "release": true,
-      "tokenRef": "GITHUB_AUTH"
+      "tokenRef": "GITHUB_AUTH",
+      "assets": [
+        "dist/dist.tgz"
+      ]
     }
   }
 }
