--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
   "license": "Mozilla Public License 2.0",
   "release-it": {
     "hooks": {
-      "after:bump": "npm run build -w twig-parser"
+      "after:bump": "npm run build -ws"
     },
     "plugins": {
-      "release-it-lerna-changelog": {
+      "@release-it-plugins/lerna-changelog": {
         "infile": "CHANGELOG.md",
         "launchEditor": false
+      },
+      "@release-it-plugins/workspaces": {
+        "additionalManifests": {
+          "dependencyUpdates": [
+            "packages/twig-parser/package.json"
+          ]
+        }
       }
     },
     "git": {
@@ -30,6 +37,7 @@
   ],
   "devDependencies": {
     "@release-it-plugins/lerna-changelog": "^5.0.0",
+    "@release-it-plugins/workspaces": "^3.2.0",
     "release-it": "^15.10.3"
   }
 }
