--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
       },
       "@release-it-plugins/workspaces": {
         "additionalManifests": {
+          "versionUpdates": [
+            "package.json",
+            "packages/twig-parser/package.json"
+          ],
           "dependencyUpdates": [
             "packages/twig-parser/package.json"
           ]
