--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
         "additionalManifests": {
           "versionUpdates": [
             "package.json",
-            "packages/twig-parser/package.json"
+            "packages/twig-parser/package.json",
+            "packages/website/package.json"
           ],
           "dependencyUpdates": [
-            "packages/twig-parser/package.json"
+            "packages/twig-parser/package.json",
+            "packages/website/package.json"
           ]
         }
       }
@@ -37,7 +39,8 @@
     }
   },
   "workspaces": [
-    "packages/twig-parser"
+    "packages/twig-parser",
+    "packages/website"
   ],
   "devDependencies": {
     "@release-it-plugins/lerna-changelog": "^5.0.0",
