--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "github": {
       "release": true,
       "tokenRef": "GITHUB_AUTH"
-    }
+    },
+    "npm": false
   },
   "workspaces": [
     "packages/twig-parser"
