--- a/packages/twig-parser/package.json
+++ b/packages/twig-parser/package.json
@@ -5,7 +5,11 @@
   "main": "out/cjs/index.cjs",
   "types": "out/cjs/index.d.js",
   "type": "module",
-  "repository": "https://github.com/kaermorchen/twig-parser",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kaermorchen/twig-parser",
+    "directory": "packages/twig-parser"
+  },
   "scripts": {
     "build": "npm run clean && npm run build:esm && npm run build:cjs",
     "build:cjs": "npm run esbuild-base -- --target=es6    --outfile=out/cjs/index.cjs --format=cjs --minify",
