--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "twig-parser",
   "version": "0.2.0",
   "repository": "https://github.com/kaermorchen/twig-parser",
   "scripts": {
@@ -44,5 +43,6 @@
     "@release-it-plugins/lerna-changelog": "^5.0.0",
     "@release-it-plugins/workspaces": "^3.2.0",
     "release-it": "^15.10.3"
-  }
+  },
+  "private": true
 }
