Add module primary entry point

--- a/packages/twig-parser/package.json
+++ b/packages/twig-parser/package.json
@@ -3,7 +3,8 @@
   "version": "0.2.0",
   "description": "This tool transforms a twig template to AST",
   "main": "out/cjs/index.cjs",
-  "types": "out/cjs/index.d.js",
+  "module": "out/esm/index.mjs",
+  "types": "out/esm/index.d.js",
   "type": "module",
   "repository": {
     "type": "git",
