--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -80,6 +80,7 @@
     "stylelint-prettier": "^3.0.0",
     "tailwindcss": "^3.3.2",
     "tracked-built-ins": "^3.1.1",
+    "twig-parser": "^0.2.0",
     "typescript": "^5.0.4",
     "webpack": "^5.78.0"
   },
