--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
           "versionUpdates": [
             "package.json",
             "packages/twig-parser/package.json",
-            "packages/website/package.json"
+            "website/package.json"
           ],
           "dependencyUpdates": [
             "packages/twig-parser/package.json",
-            "packages/website/package.json"
+            "website/package.json"
           ]
         }
       }
@@ -41,7 +41,7 @@
   },
   "workspaces": [
     "packages/twig-parser",
-    "packages/website"
+    "website"
   ],
   "devDependencies": {
     "@release-it-plugins/lerna-changelog": "^5.0.0",
