Rename demo from twig-parser-demo to website

--- a/website/package.json
+++ b/website/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "twig-parser-demo",
+  "name": "website",
   "version": "0.0.0",
   "private": true,
-  "description": "Small description for twig-parser-demo goes here",
+  "description": "Small description for website goes here",
   "repository": "",
   "license": "MIT",
   "author": "",
