--- a/.github/workflows/deploy-website.yml
+++ b/.github/workflows/deploy-website.yml
@@ -39,10 +39,10 @@ jobs:
           cache: npm
 
       - name: Install Dependencies
-        run: npm ci -w website
+        run: npm ci -ws
 
       - name: Build
-        run: npm run build -w website
+        run: npm run build -ws
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
