Add vscode extension

--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
             "package.json",
             "packages/twig-parser/package.json",
             "packages/twig-language-server/package.json",
+            "packages/vscode-twig/package.json",
             "website/package.json"
           ],
           "dependencyUpdates": [
             "packages/twig-parser/package.json",
             "packages/twig-language-server/package.json",
+            "packages/vscode-twig/package.json",
             "website/package.json"
           ]
         }
@@ -43,6 +45,7 @@
   "workspaces": [
     "packages/twig-parser",
     "packages/twig-language-server",
+    "packages/vscode-twig",
     "website"
   ],
   "devDependencies": {
