--- a/packages/twig-language-server/package.json
+++ b/packages/twig-language-server/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "out/index.js",
   "scripts": {
-    "build": "tsc --build",
-    "test": "test"
+    "vscode:prepublish": "npm run esbuild-base -- --minify",
+    "esbuild-base": "esbuild ./src/index.ts --bundle --outfile=out/index.js --format=cjs --platform=node",
+    "esbuild": "npm run esbuild-base -- --sourcemap",
+    "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
+    "release": "release-it"
   },
   "author": "",
   "repository": {
@@ -18,6 +21,14 @@
     "vscode-languageserver-textdocument": "^1.0.8"
   },
   "devDependencies": {
-    "@types/node": "^18.16.0"
+    "@release-it-plugins/lerna-changelog": "^5.0.0",
+    "@types/node": "^18.16.0",
+    "@types/vscode": "^1.74.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "esbuild": "^0.17.8",
+    "eslint": "^8.29.0",
+    "release-it": "^15.6.0",
+    "typescript": "^4.9.4"
   }
 }
