--- a/packages/vscode-twig/package.json
+++ b/packages/vscode-twig/package.json
@@ -12,7 +12,6 @@
   "keywords": [
     "Twig"
   ],
-  "icon": "",
   "license": "",
   "categories": [
     "Linters",
@@ -59,6 +58,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "twig-language-server": "^0.0.0",
     "vscode-languageclient": "^8.1.0"
   },
   "release-it": {
